fix items in HeaderContent overflowing

--- a/src/App.global.css
+++ b/src/App.global.css
@@ -59,11 +59,6 @@ a:hover {
   margin: 20px 0;
 }
 
-.Header {
-  display: flex;
-  flex-direction: row;
-}
-
 .App {
   height: 100vh;
   width: 100vw;
@@ -74,6 +69,12 @@ a:hover {
 
 .HeaderContent {
   height: 10%;
+}
+
+.Header {
+  height: 100%;
+  display: flex;
+  flex-direction: row;
 }
 
 .BodyContent {
